--- a/wajibisha/templates/blocks/newsletter.html
+++ b/wajibisha/templates/blocks/newsletter.html
@@ -1,6 +1,6 @@
 
 <div class="container newsletter">
-  <div class="d-flex justify-content-center pt-5 pb-5"><hr align="center" width="32%" style="border-color:#707070;">
+  <div class="d-flex pl-5 justify-content-center pt-5 pb-5"><hr align="center" width="32%" style="border-color:#707070;">
 </div>
   <h4 class="text-center pt-3" style="color:#707070;">Sign up for weekly for weekly tracker updates in your inbox below.</h4>
   <form class="form-inline justify-content-center pt-5 pb-5">
