--- a/wajibisha/templates/categories.html
+++ b/wajibisha/templates/categories.html
@@ -3,56 +3,34 @@
 {% block body_id %}page{% endblock %}
 
 {% block header_content %}
-<div class="promises-header clearfix">
-	<div class="wrapper content-container">
-		<div class="column-third text-left">
-			<h2>Promises</h2>
-			<div>
-				<p style="margin:0;">Population: 3,138,369</p>
-				<p>Area: 696 sq.km</p>
-			</div>
-			<p>Censes data: 2009</p>
-		</div>
-		<div class="column-third">
-			<div class="form-group">
-				<input type="text" class="form-control form-control-lg border-right-5" id="validationDefault03" 
-				placeholder=" Search" required >
-			</div>
-		</div>
-		<div class="column-third push-right">
-			<img src="http://via.placeholder.com/30x30" class="presentation-img rounded-circle">
-		</div>
-	</div>
-</div>
-<div class="container p-0" style="height:350px;width:100%;max-width:1480px;">
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.6498664422!2d36.56720029142611!3d-1.3031933719272912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1523613390419" width="1480" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
+{% include 'blocks/promises-header.html' %}
 {% endblock header_content %}
 
 {% block content_container %}
 
 <div class="showcase how-it-works text-center">
 	<div class="wrapper clearfix">
-		<h2>All the promises</h2>
+		<h4>ALL PROMISES</h4>
 		<br/>
 	</div>
 	<div class="container">
 		<div class="row d-flex flex-row justify-content-end pb-5" style="color:#006699;">
 			<p class="small pt-3 pb-3">Group by:</p>
 			<div class="btn-group pl-4 pr-5" role="group" aria-label="Group by"">
-				<button type="button" class="btn btn-primary pl-4 pr-3 border-2" style="border-top-left-radius:50px;border-bottom-left-radius:50px;border-color:#808080;background-color:#f9f9f9!important;">STATUS</button>
+				<button type="button" class="btn pl-4 pr-3 border-2" disabled style="border-top-left-radius:50px;border-bottom-left-radius:50px;color:#808080;border-color: #808080;background-color: #f9f9f9!important;">STATUS</button>
 
-				<button type="button" class="btn pr-4 border-2" disabled style="border-top-right-radius:50px;border-bottom-right-radius:50px;background-color:#0067A3!important;border-color:#0067A3;">CATEGORY</button>
+				<button type="button" class="btn pr-4 border-2"  style="border-top-right-radius:50px;border-bottom-right-radius:50px;color:#F5F5F5;border-color:#0067A3;background-color:#0067A3!important;">CATEGORY</button>
 
 			</div>
 		</div>
 	</div>
 
-  <div class="container">
+<div class="wrapper clearfix">
+  <div class="container" style="color:#707070;">
     <!--start of first row-->
     <div class="d-flex flex-row pb-5 ">
       <div class="col-6" >
-        <div class="card p-0 pull-left" style="height:200px;width:400px;">
+        <div class="card p-0 offset-1" style="height:200px;width:400px;">
           <div class="d-flex flex-row" style='height:150px;'>
             <div class="justify-content-left">
               <img class="card-img p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
@@ -63,14 +41,14 @@
             </div>
           </div>
           <div class="d-flex flex-row card-footer">
-            <p class="offset-1"><i class="fa fa-share-alt" aria-hidden="true">Share</i></p>
-            <p class="offset-4"><i class="fa fa-eye" aria-hidden="true">Watch</i></p>
+            <p class=""><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
+            <p class=""><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
           </div>
         </div>
       </div>
 
       <div class="col-6" >
-        <div class="card p-0 pull-left" style="height:200px;width:400px;">
+        <div class="card p-0 pull-left offset-2" style="height:200px;width:400px;">
           <div class="d-flex flex-row" style='height:150px;'>
             <div class="justify-content-left">
               <img class="card-img p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
@@ -81,8 +59,8 @@
             </div>
           </div>
           <div class="d-flex flex-row card-footer">
-            <p class="offset-1"><i class="fa fa-share-alt" aria-hidden="true">Share</i></p>
-            <p class="offset-4"><i class="fa fa-eye" aria-hidden="true">Watch</i></p>
+            <p class=""><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
+            <p class=""><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
           </div>
         </div>
       </div>
@@ -92,7 +70,7 @@
 <!--start of second row-->
   <div class="d-flex flex-row pt-5">
       <div class="col-6 pb-5" >
-        <div class="card p-0 pull-left" style="height:200px;width:400px;">
+        <div class="card p-0 offset-1" style="height:200px;width:400px;">
           <div class="d-flex flex-row" style='height:150px;'>
             <div class="justify-content-left">
               <img class="card-img p-0" src="{% static 'img/tracker/statuses/Unfulfilled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
@@ -103,14 +81,14 @@
             </div>
           </div>
           <div class="d-flex flex-row card-footer">
-            <p class="offset-1"><i class="fa fa-share-alt" aria-hidden="true">Share</i></p>
-            <p class="offset-4"><i class="fa fa-eye" aria-hidden="true">Watch</i></p>
+            <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
+            <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
           </div>
         </div>
       </div>
 
       <div class="col-6 pb-5">
-        <div class="card p-0 pull-left" style="height:200px;width:400px;">
+        <div class="card p-0 offset-2" style="height:200px;width:400px;">
           <div class="d-flex flex-row" style='height:150px;'>
             <div class="justify-content-left">
               <img class="card-img p-0" src="{% static 'img/tracker/statuses/Stalled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
@@ -121,12 +99,13 @@
             </div>
           </div>
           <div class="d-flex flex-row card-footer">
-            <p class="offset-1"><i class="fa fa-share-alt" aria-hidden="true">Share</i></p>
-            <p class="offset-4"><i class="fa fa-eye" aria-hidden="true">Watch</i></p>
+            <p class=""><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
+            <p class=""><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
           </div>
         </div>
       </div>
   </div>
+</div>
 </div>
 {% include 'blocks/info-card.html' %}
 	{% include 'blocks/buttons.html' %}
