--- a/wajibisha/templates/promises.html
+++ b/wajibisha/templates/promises.html
@@ -3,48 +3,13 @@
 {% block body_id %}page{% endblock %}
 
 {% block header_content %}
-<div class="promises-header clearfix">
-	<div class="wrapper content-container">
-		<div class="column-third text-left">
-			<h2>Nairobi</h2>
-			<div>
-				<p style="margin:0;">Population: 3,138,369</p>
-				<p>Area: 696 sq.km</p>
-			</div>
-			<p>Censes data: 2009</p>
-		</div>
-		<div class="column-third">
-      <div id="custom-search-input">
-        <div class="row">
-          <div class="col-md-12"> 
-            <input class="search-query form-control form-control-lg" placeholder="Search" type="text">
-          </div>
-          </div>
-        </div>
-			<!--<div class="form-group">
-				<input type="text" class="form-control form-control-lg border-right-5" id="validationDefault03" 
-				placeholder=" Search" required >
-			</div>-->
-		</div>
-    <div class="column-third text-right">
-        <img src="{% static 'img/profiles/mike-sonko.jpg' %}" class="rounded-circle" height="150px;"> 
-        <div>
-          <p class="pb-0"><b>Governor : </b> Mike Sonko</p>
-        <p class="pt-0"><b>Days in Office:</b> 138</p>
-        <p class="pb-0">Term: 1ST</p>
-      </div>
-    </div>
-	</div>
-</div>
-<div class="container p-0" style="height:350px;width:100%;max-width:1480px;">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.6498664422!2d36.56720029142611!3d-1.3031933719272912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1523613390419" width="1480" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
+{% include 'blocks/promises-header.html' %}
 {% endblock header_content %}
 
 {% block content_container %}
 <div class="showcase how-it-works text-center">
   <div class="wrapper clearfix">
-    <h2>All the promises</h2>
+    <h4>ALL PROMISES</h4>
     <br/>
   </div>
   <div class="container">
@@ -275,6 +240,48 @@
           <div class="d-flex flex-row" style='height:150px;'>
             <div class="col-6 p-0">
               <img class="card-img p-0" src="{% static 'img/tracker/categories/Traffic Management.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+            </div>
+            <div class="col-6 p-0">
+              <div class="">
+                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
+          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+            <div class="d-flex flex-row">
+              <div class="justify-content-start" style="font-weight:300;">
+                <p class="pl-4"><b>1</b></p>
+                <p class="pl-4 pt-2 ml-5">Fulfilled</p>
+                <p class="pl-4"><b>0</b></p>
+                <p class="pt-2 pl-4 ml-5">In Progress</p>
+              </div>
+              <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <p><b>13</b><br></p>
+                <p class="pt-2 pl-5">Unfulfilled</p>
+                <p><b>0</b><br></p>
+                <p class="pt-2 pl-4">Stalled</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex flex-row pb-3 pt-3">
+            <p class="pt-0 mr-auto">
+              <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+              <span >Share</span></p>
+            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+        </div>
+        </div>
+      </div>
+
+
+      <div class="col-4 pt-5">
+        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
+          <div class="d-flex flex-row" style='height:150px;'>
+            <div class="col-6 p-0">
+              <img class="card-img p-0" src="{% static 'img/tracker/categories/Social Inclusion.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
             </div>
             <div class="col-6 p-0">
               <div class="">
