Update changes on Health.html

--- a/wajibisha/templates/health.html
+++ b/wajibisha/templates/health.html
@@ -76,7 +76,7 @@
         </table>
       </div>
       <!--start of second row-->
-      <div class="row pt-5 pb-5">
+      <div class="row pt-5 pl-3 pb-5">
         <div class="col-6">
           <table class="table table-bordered bg-light" style="height:180px;width:520px;">
             <tbody>
@@ -104,7 +104,7 @@
           </table>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 pl-4">
           <table class="table table-bordered bg-light" style="height:180px;width:520px;">
             <tbody>
               <tr>
@@ -135,6 +135,128 @@
     </div>
     <!--./end of fulfilled card section-->
 
+
+<!--start of third row-->
+      <div class="row pl-3 pb-5">
+        <div class="col-6">
+          <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+            <tbody>
+              <tr>
+                <td style="width:120px;height:150px;">
+                  <img class="p-0" src="{% static 'img/tracker/statuses/Unfulfilled-portrait.svg.svg' %}" alt="Fulfilled"
+                  style="display:block;width:100%;">
+                </td>
+                <td colspan="3">
+                  <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                  <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
+                </td>
+              </tr>
+              <tr>
+                <td><p class="font-weight-normal text-center">IN PROGRESS</p></td>
+                <td colspan="3">
+                  <div class="d-flex flex-row">
+                    <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="col-6 pl-4">
+          <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+            <tbody>
+              <tr>
+                <td style="width:120px;height:150px;">
+                  <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                  style="display:block;width:100%;">
+                </td>
+                <td colspan="3">
+                  <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                  <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
+                </td>
+              </tr>
+              <tr>
+                <td><p class="font-weight-normal text-center">FULFILLED</p></td>
+                <td colspan="3">
+                  <div class="d-flex flex-row">
+                    <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+
+          </table>
+        </div>
+      </div>
+    </div>
+
+
+    <!--start of fourth row-->
+      <div class="row pt-5 pl-3 pb-5">
+        <div class="col-6">
+          <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+            <tbody>
+              <tr>
+                <td style="width:120px;height:150px;">
+                  <img class="p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" alt="Fulfilled"
+                  style="display:block;width:100%;">
+                </td>
+                <td colspan="3">
+                  <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                  <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
+                </td>
+              </tr>
+              <tr>
+                <td><p class="font-weight-normal text-center">IN PROGRESS</p></td>
+                <td colspan="3">
+                  <div class="d-flex flex-row">
+                    <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="col-6 pl-4">
+          <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+            <tbody>
+              <tr>
+                <td style="width:120px;height:150px;">
+                  <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                  style="display:block;width:100%;">
+                </td>
+                <td colspan="3">
+                  <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                  <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
+                </td>
+              </tr>
+              <tr>
+                <td><p class="font-weight-normal text-center">FULFILLED</p></td>
+                <td colspan="3">
+                  <div class="d-flex flex-row">
+                    <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+
+          </table>
+        </div>
+      </div>
+    </div>
+
+
   </div>
   </div>
+</div>
   {% endblock %}
