--- a/wajibisha/templates/health.html
+++ b/wajibisha/templates/health.html
@@ -15,6 +15,59 @@
 	</div>
 
 <div class="wrapper clearfix">
+
+
+  <div class="container">
+      <div class="row">
+        <div class="col-6 pull-left">
+          <div class="row d-flex flex-row justify-content-start">
+            <p><i class="fa fa-3x fa-angle-left pr-4" aria-hidden="true" style="color:#0067A3;"></i><strong class="pr-4">GO BACK</strong><span> Showing 1 - 7 of 7 promises</span></p>
+          </div>
+        </div>
+        <div clas="col-6 text-left">
+          <div class="d-flex flex-row justify-content-start">
+            <div class="row d-flex flex-row justify-content-end pb-5" style="color:#006699;">
+              <p class="small pt-3 pb-3">Filter by:</p>
+              <div class="d-flex flex-row judtify-content-end pl-4 pt-2 pr-5 ">
+                <div class="dropdown pl-4">
+                  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">FULFILLED
+                    <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                      <li><a href="#"></a></li>
+                      <li><a href="#"></a></li>
+                      <li><a href="#"></a></li>
+                    </ul>
+                  </div>
+                  <div class="dropdown pl-4">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">CATEGORY
+                      <span class="caret"></span></button>
+                      <ul class="dropdown-menu">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                      </ul>
+                    </div>
+                    <div class="dropdown pl-4">
+                      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"style="border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">DURATION
+                        <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                          <li><a href="#"></a></li>
+                          <li><a href="#"></a></li>
+                          <li><a href="#"></a></li>
+                        </ul>
+                      </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+
+
+
   <!--fulfilled card section-->
   <div class="container pt-5">
     <div class="row pt-5 pb-5">
@@ -253,6 +306,34 @@
           </table>
         </div>
       </div>
+
+
+
+      <div class="d-flex flex-row justify-content-center" >
+        <nav aria-label="Navigation" style="color:#707070;">
+          <ul class="pagination">
+            <li class="page-item">
+              <a class="pl-1" href="#" aria-label="Previous">
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
+                <span class="sr-only">Previous</span>
+              </a>
+            </li>
+            <li class="page-item"><a class="pl-1 links" href="#">1</a></li>
+            <li class="page-item"><a class="pl-1 links" href="#">2</a></li>
+            <li class="page-item"><a class="pl-1 links" href="#">3</a></li>
+            <li class="page-item">
+              <a class="pl-1" href="#" aria-label="Next">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <span class="sr-only">Next</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+
+  </div>
+  
     </div>
 
 
