--- a/wajibisha/templates/fulfilled.html
+++ b/wajibisha/templates/fulfilled.html
@@ -13,11 +13,10 @@
 		<h4>FULFILLED PROMISES</h4>
 		<br/>
 	</div>
-
   <div class="wrapper clearfix">
-    <!--fulfilled card section-->
+    <!--Start of  card section-->
     <div class="container pt-5">
-      <!--first row-->
+      <!--Start of card row-->
       <div class="row pt-5 pb-5">
         <div class="col-6">
           <table class="table table-bordered bg-light" style="height:180px;width:520px;">
@@ -32,7 +31,6 @@
                   <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                 </td>
               </tr>
-
               <tr>
                 <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                 <td colspan="3">
@@ -44,10 +42,8 @@
                 </td>
               </tr>
             </tbody>
-
           </table>
         </div>
-
         <div class="col-6">
           <table class="table table-bordered bg-light" style="height:180px;width:520px;">
             <tbody>
@@ -61,7 +57,6 @@
                   <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                 </td>
               </tr>
-
               <tr>
                 <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                 <td colspan="3">
@@ -73,12 +68,11 @@
                 </td>
               </tr>
             </tbody>
-
           </table>
         </div>
         <!--end of first row-->
         <div>
-          <!--start of second row-->
+          <!--start of second card row-->
           <div class="row pt-5 pl-4 pb-5">
             <div class="col-6 pl-0">
               <table class="table table-bordered bg-light" style="height:180px;width:520px;">
@@ -106,7 +100,6 @@
                 </tbody>
               </table>
             </div>
-
             <div class="col-6">
               <table class="table table-bordered bg-light" style="height:180px;width:520px;">
                 <tbody>
@@ -120,7 +113,6 @@
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
-
                   <tr>
                     <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                     <td colspan="3">
@@ -132,14 +124,12 @@
                     </td>
                   </tr>
                 </tbody>
-
               </table>
             </div>
             <!--end of second row-->
           </div>
         </div>
-
-
+        <!--Start of third card row-->
         <div class="row pt-5 pl-4 pb-5">
             <div class="col-6 pl-0">
               <table class="table table-bordered bg-light" style="height:180px;width:520px;">
@@ -167,7 +157,6 @@
                 </tbody>
               </table>
             </div>
-
             <div class="col-6">
               <table class="table table-bordered bg-light" style="height:180px;width:520px;">
                 <tbody>
@@ -181,7 +170,6 @@
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
-
                   <tr>
                     <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                     <td colspan="3">
@@ -193,14 +181,12 @@
                     </td>
                   </tr>
                 </tbody>
-
               </table>
             </div>
             <!--end of second row-->
           </div>
         </div>
-
-<!--standalone row-->
+        <!--Stand-alone row-->
         <div class="row pb-5">
             <div class="col-6 pl-0">
               <table class="table table-bordered bg-light" style="height:180px;width:520px;">
@@ -229,8 +215,8 @@
               </table>
             </div>
           </div>
-<!--end of standalone-->
-        <!--./end of fulfilled card section-->
+          <!--end of standalone-->
+          <!--./end of fulfilled card section-->
       </div>
   </div>
   {% endblock %}
