Fix the footer section

--- a/wajibisha/templates/fulfilled.html
+++ b/wajibisha/templates/fulfilled.html
@@ -217,6 +217,7 @@
           </div>
           <!--end of standalone-->
           <!--./end of fulfilled card section-->
+          </div>
       </div>
   </div>
   {% endblock %}
