Remove team from parent class

--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -3,7 +3,7 @@
   <div class="wrapper clearfix text-center">
    <h3 style="color:#0067A3;">THE TEAM</h3>
    <!--start a first card group-->
-  <div class='team pt-0 card-group'>
+  <div class='pt-0 card-group'>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
         <img clas="card-img" src="{% static 'img/aboutus/team.png' %}">
@@ -21,7 +21,7 @@
     </div>
   </div>
   <!--start of second card group-->
-  <div class='team card-group'>
+  <div class='card-group'>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
         <img src="{% static 'img/aboutus/team.png' %}">
