display promises by status

--- a/pesayetu/templates/profile/profile_detail.html
+++ b/pesayetu/templates/profile/profile_detail.html
@@ -3,7 +3,8 @@
         <p class="caption"><strong>Budget Allocation data:</strong> 2013, 2014,
             2015, 2016, 2017</p>
     </div>
-{% endblock %} {% block profile_detail %}
+{% endblock %}
+{% block profile_detail %}
 
 
     <article id="budget"
