--- a/wajibisha/templates/profile/profile_detail.html
+++ b/wajibisha/templates/profile/profile_detail.html
@@ -69,6 +69,8 @@
         </div>
       </div>
     </div>
+
+  <p><a href="/promises/county-47-nairobi">View Detailed Promises</a></p>
   </div>
 
 
