--- a/wajibisha/templates/profile/profile_detail.html
+++ b/wajibisha/templates/profile/profile_detail.html
@@ -21,8 +21,7 @@
       <div class="row d-flex flex-row justify-content-end pb-5"
            style="color:#006699;">
         <p class="small pt-3 pb-3">Group by:</p>
-        <div class="btn-group pl-4 pr-5" role="group" aria-label="Group by"
-        ">
+        <div class="btn-group pl-4 pr-5" role="group" aria-label="Group by">
         <button type="button" class="btn btn-primary pl-4 pr-3 border-2"
                 style="border-top-left-radius:50px;border-bottom-left-radius:50px;border-color:#0067A3;background-color:#0067A3;">
           STATUS
