--- a/wajibisha/templates/promises.html
+++ b/wajibisha/templates/promises.html
@@ -88,16 +88,16 @@
 
       function getPromiseHTML(promise) {
           var html = "<div class=\"col-6\">\n" +
-          "            <table class=\"table table-bordered bg-light promise-item\">\n" +
-          "              <tbody>\n" +
-          "              <tr>\n" +
-          "                <td>\n" +
-          "                <img class=\"p-0 card_status_img\" src=\"/static/img/tracker/statuses/";
+              "            <table class=\"table table-bordered bg-light promise-item\">\n" +
+              "              <tbody>\n" +
+              "              <tr>\n" +
+              "                <td>\n" +
+              "                <img class=\"p-0 card_status_img\" src=\"/static/img/tracker/statuses/";
 
           var card_img = "";
           switch (promise.status) {
               case 'In Progress':
-                  card_img = "In-progress-portrait.svg\" ";
+                  card_img = "In-Progress-portrait.svg\" ";
                   break;
               case 'Done':
                   card_img = "Fulfilled-portrait.svg\" ";
@@ -116,45 +116,45 @@
           }
 
           html += card_img + "alt=\"card_image\">\n" +
-          "\n" +
-          "                </td>\n" +
-          "                <td colspan=\"3\">\n" +
-          "                  <button class=\"btn btn-primary rounded-0 pull-right\"\n" +
-          "                          type=\"button\"\n" +
-          "                          style=\"margin-top:-28px\">";
+              "\n" +
+              "                </td>\n" +
+              "                <td colspan=\"3\">\n" +
+              "                  <button class=\"btn btn-primary rounded-0 pull-right\"\n" +
+              "                          type=\"button\"\n" +
+              "                          style=\"margin-top:-28px\">";
 
           html += promise.sector + "</button>\n" +
-          "                  <div class=\"pt-2\"><p\n" +
-          "                      class=\"text-center pt-5\">" + promise.promise;
+              "                  <div class=\"pt-2\"><p\n" +
+              "                      class=\"text-center pt-5\">" + promise.promise;
 
           html += "</p></div>\n" +
-          "                </td>\n" +
-          "              </tr>\n" +
-          "\n" +
-          "              <tr>\n" +
-          "                <td><p\n" +
-          "                    class=\"font-weight-normal text-center\">" + promise.status.toUpperCase();
+              "                </td>\n" +
+              "              </tr>\n" +
+              "\n" +
+              "              <tr>\n" +
+              "                <td><p\n" +
+              "                    class=\"font-weight-normal text-center\">" + promise.status.toUpperCase();
 
           html += "</p>\n" +
-          "                </td>\n" +
-          "                <td colspan=\"3\">\n" +
-          "                  <div class=\"d-flex flex-row\">\n" +
-          "                    <p class=\"offset-1\"><img\n" +
-          "                        src=\"{% static 'img/tracker/Share.svg' %}\" height=\"15px\"\n" +
-          "                        width=\"15px\"> Share</p>\n" +
-          "                    <p class=\"offset-1\"><img\n" +
-          "                        src=\"{% static 'img/tracker/Watch.svg' %}\" height=\"15px\"\n" +
-          "                        width=\"15px\"> Watch</p>\n" +
-          "                    <p class=\"offset-1\"><img\n" +
-          "                        src=\"{% static 'img/tracker/Clap.svg' %}\" height=\"15px\"\n" +
-          "                        width=\"15px\"> Congratulate</p>\n" +
-          "                  </div>\n" +
-          "                </td>\n" +
-          "              </tr>\n" +
-          "              </tbody>\n" +
-          "\n" +
-          "            </table>\n" +
-          "          </div>";
+              "                </td>\n" +
+              "                <td colspan=\"3\">\n" +
+              "                  <div class=\"d-flex flex-row\">\n" +
+              "                    <p class=\"offset-1\"><img\n" +
+              "                        src=\"{% static 'img/tracker/Share.svg' %}\" height=\"15px\"\n" +
+              "                        width=\"15px\"> Share</p>\n" +
+              "                    <p class=\"offset-1\"><img\n" +
+              "                        src=\"{% static 'img/tracker/Watch.svg' %}\" height=\"15px\"\n" +
+              "                        width=\"15px\"> Watch</p>\n" +
+              "                    <p class=\"offset-1\"><img\n" +
+              "                        src=\"{% static 'img/tracker/Clap.svg' %}\" height=\"15px\"\n" +
+              "                        width=\"15px\"> Congratulate</p>\n" +
+              "                  </div>\n" +
+              "                </td>\n" +
+              "              </tr>\n" +
+              "              </tbody>\n" +
+              "\n" +
+              "            </table>\n" +
+              "          </div>";
 
           return html;
       }
