--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -125,6 +125,10 @@ body {
   color: $color-yellow;
 }
 
+.blue-text {
+  color:#B7E4FF; 
+}
+
 .how-it-works img {
   //max-width: 100px;
   max-width: 100%;
@@ -185,5 +189,9 @@ select.form-control.form-control-lg {
 
 .links li a:hover {
   font-size: 18px;
+}
+
+.footer-text {
+  text-decoration:none;
 }
 
