--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -17,13 +17,13 @@
         </p>
         <ul >
           <li>
-            <a href="https://biscuitindex.codeforkenya.org" target="_blank" style="text-decoration:none;">Biscuit Index</a>
+            <a class="footer-text" href="https://biscuitindex.codeforkenya.org" target="_blank">Biscuit Index</a>
           </li>
           <li>
-            <a href="https://taxclock.codeforkenya.org" target="_blank" style="text-decoration:none;">Task Clock</a>
+            <a class="footer-text" href="https://taxclock.codeforkenya.org" target="_blank">Task Clock</a>
           </li>
           <li>
-            <a href="https://pesacheck.org" target="_blank" style="text-decoration:none;">PesaCheck</a>
+            <a class="footer-text" href="https://pesacheck.org" target="_blank">PesaCheck</a>
           </li>
         </ul>
         <br>
@@ -32,7 +32,7 @@
         </p>
         <ul>
           <li>
-            <a href="https://facebook.com/HacksHackersAfrica" target="_blank" style="text-decoration:none;">Hacks/Hackers Africa</a>
+            <a class="footer-text" href="https://facebook.com/HacksHackersAfrica" target="_blank">Hacks/Hackers Africa</a>
           </li>
         </ul>
       </div>
