--- a/wajibisha/templates/blocks/promises-header.html
+++ b/wajibisha/templates/blocks/promises-header.html
@@ -3,11 +3,11 @@
 	<div class="wrapper content-container">
 		<div class="column-third text-left">
 			<h2>Nairobi</h2>
-			<div>
+			<div class="blue-text">
 				<p style="margin:0;">Population: 3,138,369</p>
 				<p>Area: 696 sq.km</p>
 			</div>
-			<p>Censes data: 2009</p>
+			<p class="blue-text">Censes data: 2009</p>
 		</div>
 		<div class="column-third">
 			<div id="custom-search-input">
@@ -20,14 +20,62 @@
 		</div>
 		<div class="column-third text-right">
 			<img src="{% static 'img/profiles/mike-sonko.jpg' %}" class="rounded-circle" height="150px;"> 
-			<div>
-				<p class="pb-0"><b>Governor : </b> Mike Sonko</p>
-				<p class="pt-0"><b>Days in Office:</b> 138</p>
-				<p class="pb-0">Term: 1ST</p>
+			<div class="blue-text">
+				<p class="pb-0">
+          <b>Governor : </b> Mike Sonko<br>
+          <b>Days in Office:</b>138<br>
+          <b>Term:</b>1st<br>
+        </p>
 			</div>
 		</div>
+
+    <div class="column-third" style="padding-left:15rem;">
+      <div class="card p-0" style="width:600px;height:260px;margin-top:-8rem;color:#707070:">
+        <div class="card-title pt-3" style="color:#707070;">OVERVIEW</div>
+        <div class="card-body">
+
+          <div class="column-third" style="color:#707070;">
+            <div class="d-flex flex-column pl-3">
+              <p class="text-left">
+                <b class="text-success" style="font-size:1.4rem;">7</b><br>
+                Promises fulfilled
+              </p>
+              <p class="text-left">
+                <b class="text-primary" style="font-size:1.4rem;">12</b><br>
+                Promises in progress
+              </p>
+            </div>
+          </div>
+          <div class="column-third" style="color:#707070;">
+            <img src="{% static 'img/tracker/Ring Pie Chart.svg' %}">
+            <p class="pt-0 text-center pr-5 pl-5" style="margin-top:-8rem;font-weight:100;"><b style="font-size:2rem;">63</b> Promises in total</p>
+          </div>
+
+          <div class="column-third" style="color:#707070;">
+            <div class="d-flex flex-column pl-3 pr-2">
+              <p class="text-left">
+                <b class="text-warning" style="font-size:1.4rem;">6</b><br>
+                Promises not fulfilled
+               </p>
+              <p class="text-left">
+                <b class="text-danger" style="font-size:1.4rem;">3</b><br>
+            Promises stalled</p>
+            </div>
+          </div> 
+        </div>
+      </div>
+    </div>
 	</div>
 </div>
+
 <div class="container p-0" style="height:350px;width:100%;max-width:1480px;">
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.6498664422!2d36.56720029142611!3d-1.3031933719272912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1523613390419" width="1480" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.6498664422!2d36.56720029142611!3d-1.3031933719272912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1523613390419" width="1480" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
+
+<div class="text-center" style="margin-top:-4rem;">
+ <a hef=""><button class="btn" style="color:white;border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">ENLARGE BUTTON</button></a>
+</div>
+
+
+
+
