--- a/wajibisha/templates/articles.html
+++ b/wajibisha/templates/articles.html
@@ -49,6 +49,10 @@
   <br>
   <!--Card articles-->
   <div class="container pl-5 pr-2">
+    <div class="d-flex flex-column pr-5 pt-4">
+     <hr class="text-center border-6" size="10" style="border-color:#0067A3;height:12px;width:100%;width:30% blue;">
+     <p class="pt-0" style="color:#0067A3;">MOST VIEWED ARTICLES</p>
+    </div>
     <div class="row pt-5" style="color:#707070;">
       <div class="col-8 d-flex flex-column">
         <div class="card d-flex flex-lg-row p-0" style="height:280px;width:660px">
@@ -103,6 +107,12 @@
         </div>
         <!--End of articles-->
         <div class="container pl-2" style="height:200vh;min-height;100%;color:#707070;">
+          <div class="container ml-3 pl-4">
+            <div class="d-flex flex-column pr-5 pt-5">
+             <hr class="text-center border-6" size="10" style="border-color:#0067A3;height:12px;width:100%;">
+             <p class="pt-0" style="color:#0067A3;">PREVIOUS ARTICLES</p>
+           </div>   
+         </div>
           <div class="row pl-5 pr-5 pt-5 pb-5">
             <div class="card-deck">
               <div class="card p-0" style="height:580px;">
